# docs/swagger.json
@@ -5,6 +5,32 @@
     },
     "paths": {
         "/students": {
+            "get": {
+                "description": "Retrieve entities details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "students"
+                ],
+                "summary": "Get a list of entities",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Registration",
+                        "name": "register",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new entity asking all parameters of the student struct",
                 "consumes": [
@@ -16,7 +42,7 @@
                 "tags": [
                     "students"
                 ],
-                "summary": "Create entities",
+                "summary": "Create entity",
                 "parameters": [
                     {
                         "type": "integer",
@@ -44,7 +70,7 @@
                 "tags": [
                     "students"
                 ],
-                "summary": "Gets the information about entities",
+                "summary": "Get entity by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -70,7 +96,7 @@
                 "tags": [
                     "students"
                 ],
-                "summary": "Update information about entities",
+                "summary": "Update entity",
                 "parameters": [
                     {
                         "type": "integer",
@@ -96,7 +122,7 @@
                 "tags": [
                     "students"
                 ],
-                "summary": "Delete entities",
+                "summary": "Delete entity",
                 "parameters": [
                     {
                         "type": "integer",
